--- a/FoodDeliveryApp.Repository/FoodDeliveryApp.Repository.csproj
+++ b/FoodDeliveryApp.Repository/FoodDeliveryApp.Repository.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\FoodDeliveryApp.Domain\FoodDeliveryApp.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
