--- a/FoodDeliveryApp.Repository/FoodDeliveryApp.Repository.csproj
+++ b/FoodDeliveryApp.Repository/FoodDeliveryApp.Repository.csproj
@@ -10,7 +10,10 @@
     <PackageReference Include="MailKit" Version="4.7.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
     <PackageReference Include="MimeKit" Version="4.7.1" />
+    <PackageReference Include="Stripe" Version="1.12.0" />
+    <PackageReference Include="Stripe.net" Version="45.10.0" />
   </ItemGroup>
 
   <ItemGroup>
