--- a/FoodDeliveryApp.Service/FoodDeliveryApp.Service.csproj
+++ b/FoodDeliveryApp.Service/FoodDeliveryApp.Service.csproj
@@ -8,7 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="4.7.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
     <PackageReference Include="MimeKit" Version="4.7.1" />
+    <PackageReference Include="Stripe" Version="1.12.0" />
+    <PackageReference Include="Stripe.net" Version="45.10.0" />
   </ItemGroup>
 
   <ItemGroup>
