--- a/FoodDeliveryApp.Web/FoodDeliveryApp.Web.csproj
+++ b/FoodDeliveryApp.Web/FoodDeliveryApp.Web.csproj
@@ -19,8 +19,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.4" />
     <PackageReference Include="MimeKit" Version="4.7.1" />
+    <PackageReference Include="Stripe" Version="1.12.0" />
+    <PackageReference Include="Stripe.net" Version="45.10.0" />
   </ItemGroup>
 
   <ItemGroup>
