--- a/FoodDeliveryApp.Web/appsettings.json
+++ b/FoodDeliveryApp.Web/appsettings.json
@@ -9,8 +9,8 @@
   },
   "EmailSettings": {
     "SmtpServer": "smtp.gmail.com",
-    "SmtpUserName": "gresalika66@gmail.com",
-    "SmtpPassword": "ipoo mbuo nsnx ohch",
+    "SmtpUserName": "integratedsystemsfoodie@gmail.com",
+    "SmtpPassword": "ntyl xpvi plge zhgw",
     "SmtpServerPort": 587,
     "EnableSsl": true,
     "EmailDisplayName": "Foodie Deliveries",
