--- a/FoodDeliveryApp.Web/appsettings.json
+++ b/FoodDeliveryApp.Web/appsettings.json
@@ -14,7 +14,7 @@
     "SmtpServerPort": 587,
     "EnableSsl": true,
     "EmailDisplayName": "Foodie Deliveries",
-    "SendersName": "Foodie Deliveries"
+    "SenderName": "Foodie Deliveries"
   },
   "Logging": {
     "LogLevel": {
